*** WooCommerce Extension Changelog ***

# 1.2.3
    * Fix the links to Nuvei documentation into the plugin settings.
    * Do not process Pending DMNs.
    * Check for set integration_type before try to use it.
    * Changes into the readme file.
    * Added NUVEI_LOGS_DIR constant. Save all plugin generated files in it.
    * Removed tmp folder.

# 1.2.2
    * Fixed the missing message for Insufficient funds.
    * Tested on WP 6.1.1 and WC 7.3.0.

# 1.2.1
    * After approved transaction, do not click on #place_order button, but submit form.checkout if exists.
    * Tested on WP 6.1.1 and WC 7.1.0.

# 1.2.0
    * Hide Void button 48 hours after the Order is made.
    * Hide Void button for Zero Orders.
    * Added "Cancel Subscription" button, when the Subscription was confirmed as Active.

# 1.1.2
    * Tested on WP 6.1 and WC 7.0.1.

# 1.1.1
    * Disable Nuvei Rebilling products for Guest users.

# 1.1.0
    * Unify products with plan in a single subscription, and multiply subscription amount by their quantity.
    * Tested on WC 6.9.2.

# 1.0.4
    * Show better error message if the client get "Insufficient funds" error.
    * Upgraded latest tested WC version.

# 1.0.3
    * Tested on WP 6.0.1 and WC 6.7.0.
    * Do not get all information in debug_backtrace().
    * Added link to the Documentation for "Block Payment methods" setting.

# 1.0.2
    * Added default encoding into Cashier URL.
    * Removed set_cuid() method.
    * For Cashier URL, clientUniqueId was replaced with merchant_unique_id.
    * Removed old commented code parts.
    * Removed last checks for 'https to http' option.
    * If the logged data is string try to url decode it, if it is an URL.
    * Do not print pretty merchant payment methods list.
    * Added userData.billingAddress into Checkout SDK parameters.
    * The option for using Checkout SDK or Cashier was moved at the top of the Advanced settings. When change it, the unselected group of settings will hide.

# 1.0.1